# Chip-8-Interpreter

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.hpp  renderer.hpp
src/: chip8.cpp  main.cpp  renderer.cpp
